--- a/test-ssh/Info.plist
+++ b/test-ssh/Info.plist
@@ -4,9 +4,13 @@
 <dict>
 	<key>NSBonjourServices</key>
 	<array>
-		<string>_ssh._tcp.</string>
+        <string>_afpovertcp._tcp</string>
+		<string>_smb._tcp</string>
+		<string>_ftp._tcp</string>
+		<string>_http._tcp</string>
+		<string>_ssh._tcp</string>
 		<string>_bonjour._tcp</string>
-		<string>_lnp._tcp.</string>
+		<string>_lnp._tcp</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
